--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,8 @@
     <title>{{page.title}}</title>
 </head>
 <body>
-    <!-- <script src="https://pagecdn.io/lib/mathjs/10.5.3/math.min.js" crossorigin="anonymous"></script> -->
+    <!-- If "math is not defined" error is shown in console, visit "https://pagecdn.com/lib/mathjs" and replace the below cdn with
+    the first link in provided website -->
     <script src="https://pagecdn.io/lib/mathjs/11.0.1/math.min.js" crossorigin="anonymous"  ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     {{ content }}
