--- a/page.css
+++ b/page.css
@@ -1,530 +1,541 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
 
 :root {
-    --color-primary: #7380ec;
-    --color-danger: #ff7782;
-    --color-success: #41f1b6;
-    --color-warning: #ffbb55;
-    --color-white: #fff;
-    --color-info-dark: #7d8da1;
-    --color-info-light: #dce1eb;
-    --color-dark: #363949;
-    --color-light: rgba(132,139,200,0.18);
-    --color-primary-variant: #111e88;
-    --color-dark-variant: #677483;
-    --color-background: #f6f6f9;
+  --color-primary: #7380ec;
+  --color-danger: #ff7782;
+  --color-success: #41f1b6;
+  --color-warning: #ffbb55;
+  --color-white: #fff;
+  --color-info-dark: #7d8da1;
+  --color-info-light: #dce1eb;
+  --color-dark: #363949;
+  --color-light: rgba(132, 139, 200, 0.18);
+  --color-primary-variant: #111e88;
+  --color-dark-variant: #677483;
+  --color-background: #f6f6f9;
 
-    --card-border-radius: 2rem;
-    --border-radius-1: 0.4rem;
-    --border-radius-2: 0.8rem;
-    --border-radius-3: 1.2rem;
+  --card-border-radius: 2rem;
+  --border-radius-1: 0.4rem;
+  --border-radius-2: 0.8rem;
+  --border-radius-3: 1.2rem;
 
-    --card-padding: 1.8rem;
-    --padding-1: 1.2rem;
+  --card-padding: 1.8rem;
+  --padding-1: 1.2rem;
 
-    --box-shadow: 0 2rem 3rem var(--color-light);
+  --box-shadow: 0 2rem 3rem var(--color-light);
 }
-
 
 /*====================Dark Theme Variables====================*/
 .dark-theme-variables {
-    --color-background: #181a1e;
-    --color-white: #202528;
-    --color-dark: #edeffd;
-    --color-dark-variant: #a3bdcc;
-    --color-light: rgba(0,0,0,0.4);
-    --box-shadow: 0 2rem 3rem var(--color-light);
+  --color-background: #181a1e;
+  --color-white: #202528;
+  --color-dark: #edeffd;
+  --color-dark-variant: #a3bdcc;
+  --color-light: rgba(0, 0, 0, 0.4);
+  --box-shadow: 0 2rem 3rem var(--color-light);
 }
 
-
 * {
-    margin: 0;
-    padding: 0;
-    outline: 0;
-    appearance: none;
-    border: 0;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
-    overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  appearance: none;
+  border: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
-    font-family: 'Linux Libertine','Georgia','Times',serif;
-    font-size: 0.88rem;
-    background: var(--color-background);
-    overflow-x: hidden;
-    color: var(--color-dark);
+  width: 100vw;
+  height: 100vh;
+  font-family: "Linux Libertine", "Georgia", "Times", serif;
+  font-size: 0.88rem;
+  background: var(--color-background);
+  overflow-x: hidden;
+  color: var(--color-dark);
 }
 
 .container {
-    display: flex;
-    width: 100%;
-    margin: 0 2%;
-    gap: 1.8rem;
+  display: flex;
+  width: 100%;
+  margin: 0 2%;
+  gap: 1.8rem;
 }
 
 .flex-container {
-    display: flex;
-    flex-direction: row;
-    width: 80%;
+  display: flex;
+  flex-direction: row;
+  width: 80%;
 }
 
 a {
-    color: var(--color-dark);
+  color: var(--color-dark);
 }
 
 img {
-    display: block;
-    width: 100%;
+  display: block;
+  width: 100%;
 }
 
 aside a h3 {
-    font-size: 0.87rem;
+  font-size: 0.87rem;
 }
 
 p {
-    color: var(--color-dark-variant);
+  color: var(--color-dark-variant);
 }
 
 b {
-    color: var(--color-dark);
+  color: var(--color-dark);
 }
 .primary {
-    color: var(--color-primary);
+  color: var(--color-primary);
 }
 .danger {
-    color: var(--color-danger);
+  color: var(--color-danger);
 }
 .success {
-    color: var(--color-success);
+  color: var(--color-success);
 }
 .warning {
-    color: var(--color-warning);
+  color: var(--color-warning);
 }
 
-
 aside {
-    height: 100vh;
+  height: 100vh;
 }
 
 aside .top {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 1.4rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1.4rem;
 }
 
 aside .close {
-    display: none;
+  display: none;
 }
 
 aside .sidebar {
-    display: flex;
-    flex-direction: column;
-    height: 86vh;
-    position: fixed;
-    top: 3rem;
-    overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  height: 86vh;
+  position: fixed;
+  top: 3rem;
+  overflow-y: auto;
 }
 
 aside h3 {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 aside .sidebar a {
-    display: flex;
-    color: var(--color-info-dark);
-    margin-left: 2rem;
-    gap: 1rem;
-    align-items: center;
-    position: relative;
-    height: 3.7rem;
-    transition: all 300ms ease;
-    width: 80%;
-    overflow: hidden;
-    padding: 10%;
+  display: flex;
+  color: var(--color-info-dark);
+  margin-left: 2rem;
+  gap: 1rem;
+  align-items: center;
+  position: relative;
+  height: 3.7rem;
+  transition: all 300ms ease;
+  width: 80%;
+  overflow: hidden;
+  padding: 10%;
 }
 
 aside .sidebar a h3 {
-    transition: all 300ms ease;
+  transition: all 300ms ease;
 }
-aside .sidebar{
-    margin-top: 2%;
-    margin-left: -25px;
-    overflow-y: auto;
+aside .sidebar {
+  margin-top: 2%;
+  margin-left: -25px;
+  overflow-y: auto;
 }
 aside .sidebar a.active {
-    background: var(--color-light);
-    color: var(--color-primary);
-    margin-left: 0;
+  background: var(--color-light);
+  color: var(--color-primary);
+  margin-left: 0;
 }
 
 aside .sidebar a.active::before {
-    content: '';
-    width: 6px;
-    height: 100%;
-    background: var(--color-primary);
+  content: "";
+  width: 6px;
+  height: 100%;
+  background: var(--color-primary);
 }
 
 aside .sidebar a.active span {
-    color: var(--color-primary);
-    margin-left: calc(1rem - 3px);
+  color: var(--color-primary);
+  margin-left: calc(1rem - 3px);
 }
 
 aside .sidebar a:hover {
-    color: var(--color-primary);
+  color: var(--color-primary);
 }
 
 aside .sidebar a:hover span {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 
 aside .sidebar a:hover h3 {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 
 aside .sidebar::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 main {
-    margin-top: 1.4rem;
-    width: auto;
-    margin-right: 5px;
-    margin-left: 10%;
+  margin-top: 1.4rem;
+  width: auto;
+  margin-right: 5px;
+  margin-left: 10%;
 }
 
 .right {
-    width: 30%;
-    margin-top: 1.4rem;
-}
-
-.right .interface-section{
-    position: fixed;
-    height: 100vh;
-    overflow-y: auto;
-}
-
-.right .interface-section canvas:last-child {
-    margin-bottom: 50px;
-}
-
-.right .interface-section::-webkit-scrollbar {
-    display: none;
+  width: 30%;
+  margin-top: 1.4rem;
 }
 
 .right .interface-section {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-}
-.right .top {
-    display: flex;
-    justify-content: end;
-    gap: 2rem;
+  position: fixed;
+  height: 100vh;
+  overflow: auto;
+  right: 3%;
 }
 
-.right .top button{
-    display: none;
+.right .interface-section::-webkit-scrollbar {
+  display: none;
+}
+
+.right .interface-section {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.right .top {
+  display: flex;
+  justify-content: end;
+  gap: 2rem;
+}
+
+.right .top button {
+  display: none;
 }
 
 .right .theme-toggler {
-    background: var(--color-light);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 1.6rem;
-    width: 4.2rem;
-    cursor: pointer;
-    border-radius: var(--border-radius-1);
+  background: var(--color-light);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 1.6rem;
+  width: 4.2rem;
+  cursor: pointer;
+  border-radius: var(--border-radius-1);
 }
 
 .right .theme-toggler span {
-    font-size: 1.2rem;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  font-size: 1.2rem;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .right .theme-toggler span.active {
-    background: var(--color-primary);
-    color: white;
-    border-radius: var(--border-radius-1);
+  background: var(--color-primary);
+  color: white;
+  border-radius: var(--border-radius-1);
 }
-
-
 
 /*=======================Media Queries===========================*/
 
 @media screen and (max-width: 1200px) {
-    .container {
-        width: 94%;
-        display: flex;
-    }
+  body {
+    overflow-x: hidden;
+  }
 
-    .flex-container {
-        display: flex;
-        flex-direction: column;
-    }
+  .container {
+    width: 94%;
+    display: flex;
+  }
 
-    aside {
-        position: fixed;
-        left: -100%;
-        background: var(--color-white);
-        width: 16rem;
-        z-index: 3;
-        box-shadow: 1rem 3rem 4rem var(--color-light);
-        height: 100vh;
-        padding-right: var(--card-padding);
-        display: none;
-        animation: showMenu 400ms ease forwards;
-    }
+  .flex-container {
+    display: flex;
+    flex-direction: column;
+  }
 
-    @keyframes showMenu {
-        to {
-            left: 0;
-        }
-    }
+  aside {
+    position: fixed;
+    left: -100%;
+    background: var(--color-white);
+    width: 16rem;
+    z-index: 3;
+    box-shadow: 1rem 3rem 4rem var(--color-light);
+    height: 100vh;
+    padding-right: var(--card-padding);
+    display: none;
+    animation: showMenu 400ms ease forwards;
+  }
 
-    aside .top h2 {
-        display: inline;
+  @keyframes showMenu {
+    to {
+      left: 0;
     }
+  }
 
-    aside .sidebar {
-        margin-left: 2%;
-    }
-    aside .sidebar h3 {
-        display: inline;
-    }
+  aside .top h2 {
+    display: inline;
+  }
 
-    aside .sidebar a {
-        width: 100%;
-        height: 3.4rem;
-    }
+  aside .sidebar {
+    margin-left: 2%;
+  }
+  aside .sidebar h3 {
+    display: inline;
+  }
 
-    aside .close {
-        display: inline-block;
-        cursor: pointer;
-    }
+  aside .sidebar a {
+    width: 100%;
+    height: 3.4rem;
+  }
 
-    main {
-        width: 75vw;
-    }
+  aside .close {
+    display: inline-block;
+    cursor: pointer;
+  }
 
-    .right .top button {
-        display: inline-block;
-        background: transparent;
-        cursor: pointer;
-        color: var(--color-dark);
-        position: absolute;
-        left: 1rem;
-    }
+  main {
+    width: auto;
+  }
 
-    .right .top button span {
-        font-size: 2rem;
-    }
-    .right{
-        display:flex;
-        width: 100vw;
-        justify-content: center;
-    }
-    .right .top {
-        position: fixed;
-        top: 0;
-        left: 0;
-        align-items: center;
-        padding: 0 0.8rem;
-        height: 4.6rem;
-        background: var(--color-white);
-        width: 100%;
-        margin: 0;
-        z-index: 2;
-        box-shadow: 0 1rem 1rem var(--color-light);
-    }
+  .right .top button {
+    display: inline-block;
+    background: transparent;
+    cursor: pointer;
+    color: var(--color-dark);
+    position: absolute;
+    left: 1rem;
+  }
 
-    .right .top .theme-toggler {
-        width: 4.4rem;
-        position: absolute;
-        left: 77%;
-        height: 1.4rem;
-    }
+  .right .top button span {
+    font-size: 2rem;
+  }
+  .right {
+    display: flex;
+    width: auto;
+    justify-content: center;
+    margin: 0 auto;
+  }
+  .right .top {
+    position: fixed;
+    top: 0;
+    left: 0;
+    align-items: center;
+    padding: 0 0.8rem;
+    height: 4.6rem;
+    background: var(--color-white);
+    width: 100%;
+    margin: 0;
+    z-index: 2;
+    box-shadow: 0 1rem 1rem var(--color-light);
+  }
 
-    .right .top button {
-        display: inline-block;
-        background: transparent;
-        cursor: pointer;
-        color: var(--color-dark);
-        position: absolute;
-        left: 1rem;
-    }
+  .right .top .theme-toggler {
+    width: 4.4rem;
+    position: absolute;
+    left: 77%;
+    height: 1.4rem;
+  }
 
-    .right .top button span {
-        font-size: 2rem;
-    }
+  .right .top button {
+    display: inline-block;
+    background: transparent;
+    cursor: pointer;
+    color: var(--color-dark);
+    position: absolute;
+    left: 1rem;
+  }
 
-    main {
-        margin-top: 8rem;
-        padding: 0 1rem;
-    }
+  .right .top button span {
+    font-size: 2rem;
+  }
 
-    main table {
-        width: auto;
-        margin: 0;
-        overflow: auto;
-    }
+  main {
+    margin-top: 8rem;
+    padding: 0 1rem;
+  }
 
-    .right .interface-section {
-        position: relative;
-        width: 75vw;
-        overflow: auto;
-    }
+  .right .interface-section {
+    position: relative;
+    left: 1%;
+    width: auto;
+    height: auto;
+    margin: 0 auto;
+    overflow: auto;
+  }
+
+  .heyMain #exp {
+    margin-top: -80px;
+  }
+
+  .heyMain #exp-part-1 {
+    position: relative;
+    top: -80px;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    .container{
-        width: 100%;
-    }
+  .container {
+    width: 100%;
+  }
 
-    .flex-container {
-        flex-direction: column;
-    }
+  .flex-container {
+    flex-direction: column;
+  }
 
-    aside {
-        position: fixed;
-        left: -100%;
-        background: var(--color-white);
-        width: 18rem;
-        z-index: 3;
-        box-shadow: 1rem 3rem 4rem var(--color-light);
-        height: 100vh;
-        padding-right: var(--card-padding);
-        display: none;
-        animation: showMenu 400ms ease forwards;
-    }
+  aside {
+    position: fixed;
+    left: -100%;
+    background: var(--color-white);
+    width: 18rem;
+    z-index: 3;
+    box-shadow: 1rem 3rem 4rem var(--color-light);
+    height: 100vh;
+    padding-right: var(--card-padding);
+    display: none;
+    animation: showMenu 400ms ease forwards;
+  }
 
-    @keyframes showMenu {
-        to {
-            left: 0;
-        }
+  @keyframes showMenu {
+    to {
+      left: 0;
     }
+  }
 
-    aside .top h2 {
-        display: inline;
-    }
+  aside .top h2 {
+    display: inline;
+  }
 
-    aside .sidebar {
-        margin-left: 2%;
-    }
-    aside .sidebar h3 {
-        display: inline;
-    }
+  aside .sidebar {
+    margin-left: 2%;
+  }
+  aside .sidebar h3 {
+    display: inline;
+  }
 
-    aside .sidebar a {
-        width: 100%;
-        height: 3.4rem;
-    }
+  aside .sidebar a {
+    width: 100%;
+    height: 3.4rem;
+  }
 
-    aside .close {
-        display: inline-block;
-        cursor: pointer;
-    }
+  aside .close {
+    display: inline-block;
+    cursor: pointer;
+  }
 
-    main {
-        margin-top: 8rem;
-        padding: 0 1rem;
-    }
+  main {
+    margin-top: 8rem;
+    padding: 0 1rem;
+    width: auto;
+  }
 
-    main table {
-        width: auto;
-        margin: 0;
-        overflow: auto;
-    }
+  .right {
+    width: 94%;
+    margin: 0 auto 4rem;
+  }
 
-    .right {
-        width: 94%;
-        margin: 0 auto 4rem;
-    }
+  .right .top {
+    position: fixed;
+    top: 0;
+    left: 0;
+    align-items: center;
+    padding: 0 0.8rem;
+    height: 4.6rem;
+    background: var(--color-white);
+    width: 100%;
+    margin: 0;
+    z-index: 2;
+    box-shadow: 0 1rem 1rem var(--color-light);
+  }
 
-    .right .top {
-        position: fixed;
-        top: 0;
-        left: 0;
-        align-items: center;
-        padding: 0 0.8rem;
-        height: 4.6rem;
-        background: var(--color-white);
-        width: 100%;
-        margin: 0;
-        z-index: 2;
-        box-shadow: 0 1rem 1rem var(--color-light);
-    }
+  .right .top .theme-toggler {
+    width: 4.4rem;
+    position: absolute;
+    left: 66%;
+  }
 
-    .right .top .theme-toggler {
-        width: 4.4rem;
-        position: absolute;
-        left: 66%;
-    }
+  .right .interface-section canvas {
+    width: auto;
+  }
 
-    .right .interface-section canvas {
-        width: auto;
-    }
+  .right .top button {
+    display: inline-block;
+    background: transparent;
+    cursor: pointer;
+    color: var(--color-dark);
+    position: absolute;
+    left: 1rem;
+  }
 
-    .right .top button {
-        display: inline-block;
-        background: transparent;
-        cursor: pointer;
-        color: var(--color-dark);
-        position: absolute;
-        left: 1rem;
-    }
+  .right .top button span {
+    font-size: 2rem;
+  }
 
-    .right .top button span {
-        font-size: 2rem;
-    }
+  .right .interface-section {
+    position: relative;
+    margin: 0 20%;
+    height: auto;
+    overflow: hidden;
+  }
 
-    .right .interface-section {
-        position: relative;
-        margin: 0 20%;
-        height: 80vh;
-    }
+  .heyMain table {
+    table-layout: auto;
+    width: 100%;
+  }
 
-    .right .interface-section canvas:last-child {
-        margin-bottom: 0px;
-    }
+  .heyMain #exp {
+    margin-top: -100px;
+  }
+
+  .heyMain #exp-part-1 {
+    top: -100px;
+  }
 }
 
-
 .outputSequence {
-    width: auto;
-    max-height: max-content;
-    background-color: #fff;
-    display: none;
+  width: auto;
+  max-height: max-content;
+  background-color: #fff;
+  display: none;
 }
 
 .plot-title {
-    text-align: center;
-    display: none;
-    color: var(--color-dark);
+  text-align: center;
+  display: none;
+  color: var(--color-dark);
 }
 
-table {
-    width: max-content;
+table,
+td {
+  border: 1px solid rgb(90, 84, 84);
+  text-align: center;
 }
 
-table, td {
-    border: 1px solid rgb(90, 84, 84);
-    text-align: center;
-    /* margin:0 auto; */
-    /* min-width: 50%; */
-    /* overflow: auto; */
+th {
+  border: 1px solid rgb(90, 84, 84);
+  text-align: center;
+  background: var(--color-light);
 }
-th{
-    border: 1px solid rgb(90, 84, 84);
-    text-align: center;
-    /* min-width: 50%;
-    overflow: auto; */
-    background: var(--color-light);
+
+.heyMain {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.heyMain table {
+  width: 50%;
+  margin-left: 10%;
 }
